Turn project into workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
-[package]
-name = "calc"
-version = "0.1.0"
-authors = ["Veera <sveera.2001@gmail.com>"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+members = [
+        "core",
+        "wasm",
+        "cli",
+]               
 
-[dependencies]
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
